Commented * { box-sizing: border-box } to fix layout issue in index.html.

--- a/css/layout.css
+++ b/css/layout.css
@@ -805,15 +805,3 @@ em {
 
 .bar-column {
   text-align: left;
-
-* {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box
-}
-
-*:before,*:after {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box
-}
